--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,7 +11,7 @@
     --font:'League Spartan', sans-serif;
 }
 
-body {
+.container {
     font-family: var(--font);
     font-size: 15px;
     max-width: 375px;
