--- a/src/css/media-query.css
+++ b/src/css/media-query.css
@@ -23,8 +23,52 @@
     }
 }
 
-
 @media (min-width: 992px) {
+    .container {
+        display: grid;
+        grid-template-columns: repeat(2, auto);
+        grid-template-rows: repeat(3, auto);
+
+        grid-template-areas: 
+        "cabecalho container__star"
+        "container__comment container__comment"
+        "attribution attribution"
+        ;
+        padding: 3rem;
+        margin: 0 auto;
+        width: 900px;
+    }
+    
+    .cabecalho {
+        grid-area: cabecalho;
+    }
+
+    .cabecalho h1 {
+        font-size: 40px;
+    }
+
+    .container__star {
+        grid-area: container__star;
+    }
+
+    .container__star .report {
+        margin-left: 50px;
+    }
+
+    .container__comment {
+        grid-area: container__comment;
+    }
+
+    .container__comment .box__2 {
+        margin-right: 2rem ;
+    }
+
+    .attribution {
+        grid-area: attribution;
+    }
+}
+
+@media (min-width: 1440px) {
   
 
     .container {
@@ -39,6 +83,7 @@
         ;
         padding: 3rem;
         margin: 0 auto;
+        width: 100%;
     }
 
     /* Cabecalho */
