--- a/src/css/media-query.css
+++ b/src/css/media-query.css
@@ -83,7 +83,7 @@
         ;
         padding: 3rem;
         margin: 0 auto;
-        width: 100%;
+        width: 1440px;
     }
 
     /* Cabecalho */
